@@ -8,13 +8,13 @@ and ideas to make this software available.
 	DJ Gregor <dj@gregor.com>
 	Daniel Hanks <hanksdc@plug.org>
 	Leif Hedstrom <leif@netscape.com>
+	Emile Heitor <eheitor@isdnet.net>
 	Phillip Liu <phillip@loudcloud.com>
 	Jeff Mandel <jeff.mandel@probes.com>
 	Michael Mattice <mike@bmisystems.com>
 	Doug Nazar <nazard@dragoninc.on.ca>
 	Rakesh Patel <rpatel@globix.com>
 	Nathan Hawkins <Nathan.Hawkins@FMR.COM>
-	Aris Theocharides <aris@padl.com>
 	Stein Vrale <stein@terminator.net>
 	Greg Retowski <greg@rage.net>
 	Gero Treuner <gero@faveve.uni-stuttgart.de>
