@@ -31,7 +31,6 @@ static char rcsId[] =
 #include <unistd.h>
 #include <string.h>
 #include <stdio.h>
-#include <errno.h>
 #include <syslog.h>
 #include <signal.h>
 #include <sys/types.h>
