@@ -7,7 +7,8 @@ $Header$
 	  must check whether unencumbered)
 	* call ldapssl_client_init() once only
 	* include db_185.h not db.h for dn2uid cache
-	* fixes for FreeBSD (IRS) support
+	* fixes for FreeBSD (IRS) support from Emile
+	  Heitor
 
 113	Luke Howard <lukeh@padl.com>
 
